force-app/main/default/objects/Application__c/fields/Account_Receivable_Ratio_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Receivable_Ratio_Formula__c</fullName>
    <formula>Pendapatan_Penjualan__c /  Piutang_Usaha_Dagang__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Receivable Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>