force-app/main/default/objects/Application__c/fields/Activity_Formula__c.field-meta.xml
<CustomField>
    <fullName>Activity_Formula__c</fullName>
    <formula>&apos;Activity&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity</label>
    <type>Text</type>
</CustomField>