force-app/main/default/objects/Application__c/fields/agreement_number__c.field-meta.xml
<CustomField>
    <fullName>agreement_number__c</fullName>
    <label>Agreement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>