force-app/main/default/objects/Application__c/fields/Agreement_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number_Formula__c</fullName>
    <formula>&apos;Agreement Number&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement Number</label>
    <type>Text</type>
</CustomField>