force-app/main/default/objects/Application__c/fields/Akumulasi_Penyusutan_Kendaraan__c.field-meta.xml
<CustomField>
    <fullName>Akumulasi_Penyusutan_Kendaraan__c</fullName>
    <label>Akumulasi Penyusutan Kendaraan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>