force-app/main/default/objects/Application__c/fields/Akumulasi_Penyusutan_Peralatan_Mesin__c.field-meta.xml
<CustomField>
    <fullName>Akumulasi_Penyusutan_Peralatan_Mesin__c</fullName>
    <label>Akumulasi Penyusutan Peralatan &amp; Mesin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>