force-app/main/default/objects/Application__c/fields/Analisa_Jaminan_1__c.field-meta.xml
<CustomField>
    <fullName>Analisa_Jaminan_1__c</fullName>
    <label>Analisa Jaminan 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>