force-app/main/default/objects/Application__c/fields/Appeal_By__c.field-meta.xml
<CustomField>
    <fullName>Appeal_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appeal By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications_Review1</relationshipName>
    <type>Lookup</type>
</CustomField>