force-app/main/default/objects/Application__c/fields/Appeal_Date__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Date__c</fullName>
    <label>Appeal Date</label>
    <type>DateTime</type>
</CustomField>