force-app/main/default/objects/Application__c/fields/Appeal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Notes__c</fullName>
    <label>Appeal Notes</label>
    <type>TextArea</type>
</CustomField>