force-app/main/default/objects/Application__c/fields/Approval_Appeal__c.field-meta.xml
<CustomField>
    <fullName>Approval_Appeal__c</fullName>
    <label>Approval Appeal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto_Apl</fullName>
                <label>Auto Apl</label>
            </value>
            <value>
                <fullName>Normal_Apl</fullName>
                <label>Normal Apl</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>