force-app/main/default/objects/Application__c/fields/Approval_Given__c.field-meta.xml
<CustomField>
    <fullName>Approval_Given__c</fullName>
    <label>Approval Given</label>
    <type>DateTime</type>
</CustomField>