force-app/main/default/objects/Application__c/fields/Approval_Result_Upper__c.field-meta.xml
<CustomField>
    <fullName>Approval_Result_Upper__c</fullName>
    <formula>UPPER(Approval_Result__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Del] Approval Result</label>
    <type>Text</type>
</CustomField>