force-app/main/default/objects/Application__c/fields/Aset_Lancar_Lainnya__c.field-meta.xml
<CustomField>
    <fullName>Aset_Lancar_Lainnya__c</fullName>
    <label>Aset Lancar Lainnya</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>