force-app/main/default/objects/Application__c/fields/Aset_to_Debt_Ratio_ALR_Formula__c.field-meta.xml
<CustomField>
    <fullName>Aset_to_Debt_Ratio_ALR_Formula__c</fullName>
    <formula>( Total_Asset_Formula__c /  Total_Hutang_Jangka_Panjang_Formula__c + Total_Hutang_Jangka_Pendek_Formula__c) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aset to Debt Ratio (ALR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>