force-app/main/default/objects/Application__c/fields/Asset_Address__c.field-meta.xml
<CustomField>
    <fullName>Asset_Address__c</fullName>
    <formula>&quot;-&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Address</label>
    <type>Text</type>
</CustomField>