force-app/main/default/objects/Application__c/fields/Average_Day_Net_Profit_Margin_Formula__c.field-meta.xml
<CustomField>
    <fullName>Average_Day_Net_Profit_Margin_Formula__c</fullName>
    <formula>Laba_Rugi_setelah_Pajak_Formula__c /365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Day Net Profit Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>