force-app/main/default/objects/Application__c/fields/Beban_Lain_Lain_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Beban_Lain_Lain_Spouse__c</fullName>
    <label>Beban Lain - Lain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>