force-app/main/default/objects/Application__c/fields/Beban_Operasional_Debitur__c.field-meta.xml
<CustomField>
    <fullName>Beban_Operasional_Debitur__c</fullName>
    <label>Beban Operasional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>