force-app/main/default/objects/Application__c/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <label>Branch Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>