force-app/main/default/objects/Application__c/fields/BranchId_formula__c.field-meta.xml
<CustomField>
    <fullName>BranchId_formula__c</fullName>
    <formula>BLANKVALUE( BranchId__c ,  Lead__r.Owner.BranchId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BranchId_formula</label>
    <type>Text</type>
</CustomField>