force-app/main/default/objects/Application__c/fields/CAA_Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>CAA_Final_Approver__c</fullName>
    <formula>IF( AND(
NOT(ISBLANK(Approval_Result__c)),
NOT(ISBLANK( NST_Pricing_Shadow__r.Approval_Result__c ))
),

IF(
AND( BEGINS(Approval_Result__c,&apos;Approve&apos;) , BEGINS(NST_Pricing_Shadow__r.Approval_Result__c,&apos;Approve&apos;))
,&apos;Approve&apos;,&apos;Reject&apos;
)

,&apos;Waiting For Approval&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAA Final Approver</label>
    <type>Text</type>
</CustomField>