force-app/main/default/objects/Application__c/fields/CAA_Final_Level__c.field-meta.xml
<CustomField>
    <fullName>CAA_Final_Level__c</fullName>
    <label>CAA Final Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>