force-app/main/default/objects/Application__c/fields/CAA_Final_Result__c.field-meta.xml
<CustomField>
    <fullName>CAA_Final_Result__c</fullName>
    <formula>IF(
    ISBLANK(CAA_Step__c), &apos;&apos;,
    IF(
        Is_CAA_Final_Result__c ,
        IF(
            NOT(ISBLANK(Approval_Result__c)),
            IF(
                AND(NOT(ISBLANK(NST_Pricing_Shadow__r.Approval_Assigned__c)),ISBLANK(NST_Pricing_Shadow__r.Approval_Result__c)),
                &apos;Waiting Approval&apos;,
                IF(
                    NOT(ISBLANK(NST_Pricing_Shadow__r.Approval_Result__c)),
                    IF(
                        AND( 
                            BEGINS(Approval_Result__c,&apos;Approve&apos;) , 
                            BEGINS(NST_Pricing_Shadow__r.Approval_Result__c,&apos;Approve&apos;)
                        ),
                        &apos;Approved&apos;,&apos;Rejected&apos;
                    ),
                    IF(
                        
                        BEGINS(Approval_Result__c,&apos;Approve&apos;) , 
                        
                        &apos;Approved&apos;,&apos;Rejected&apos;
                    )
                )
            ),
            &apos;Waiting Approval&apos;
        ),
        &apos;Waiting Approval&apos;
    )
)</formula>
    <label>CAA Final Result</label>
    <type>Text</type>
</CustomField>