force-app/main/default/objects/Application__c/fields/CAA_Step__c.field-meta.xml
<CustomField>
    <fullName>CAA_Step__c</fullName>
    <label>CAA Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>