force-app/main/default/objects/Application__c/fields/check_user_branch__c.field-meta.xml
<CustomField>
    <fullName>check_user_branch__c</fullName>
    <formula>$User.BranchId__c == BranchId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>check user branch</label>
    <type>Checkbox</type>
</CustomField>