force-app/main/default/objects/Application__c/fields/Conf_Details__c.field-meta.xml
<CustomField>
    <fullName>Conf_Details__c</fullName>
    <formula>IF( $UserRole.DeveloperName ==&quot;AO&quot; &amp;&amp; INCLUDES(  Conf_Details_Editor__c  ,&quot;AO&quot;),True,
IF( $UserRole.DeveloperName ==&quot;CA&quot; &amp;&amp; INCLUDES( Conf_Details_Editor__c ,&quot;CA&quot;),True,
IF( $UserRole.DeveloperName ==&quot;LAO&quot; &amp;&amp; INCLUDES( Conf_Details_Editor__c ,&quot;LAO&quot;),True,
IF( $UserRole.DeveloperName ==&quot;Marketing AO&quot; &amp;&amp; INCLUDES( Conf_Details_Editor__c ,&quot;Marketing AO&quot;),True,
IF( $UserRole.DeveloperName ==&quot;Spv AO&quot; &amp;&amp; INCLUDES( Conf_Details_Editor__c ,&quot;Spv AO&quot;),True,
False)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conf Details</label>
    <type>Checkbox</type>
</CustomField>