force-app/main/default/objects/Application__c/fields/Conf_Doc_Checklist_Editor__c.field-meta.xml
<CustomField>
    <fullName>Conf_Doc_Checklist_Editor__c</fullName>
    <label>Conf Doc Checklist Editor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AO</fullName>
            </value>
            <value>
                <fullName>LAO</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>Marketing AO</fullName>
            </value>
            <value>
                <fullName>Spv AO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>