force-app/main/default/objects/Application__c/fields/Conf_Legal_Opini_Editor__c.field-meta.xml
<CustomField>
    <fullName>Conf_Legal_Opini_Editor__c</fullName>
    <label>Conf Legal Opini Editor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConfigAppRole</valueSetName>
    </valueSet>
</CustomField>