force-app/main/default/objects/Application__c/fields/Config_Akad_Editor__c.field-meta.xml
<CustomField>
    <fullName>Config_Akad_Editor__c</fullName>
    <formula>IF( $UserRole.DeveloperName ==&quot;AO&quot; &amp;&amp; INCLUDES(  Conf_Akad_Editor__c ,&quot;AO&quot;),True,
IF( $UserRole.DeveloperName ==&quot;CA&quot; &amp;&amp; INCLUDES( Conf_Akad_Editor__c ,&quot;CA&quot;),True,
IF( $UserRole.DeveloperName ==&quot;LAO&quot; &amp;&amp; INCLUDES( Conf_Akad_Editor__c ,&quot;LAO&quot;),True,
IF( $UserRole.DeveloperName ==&quot;Marketing AO&quot; &amp;&amp; INCLUDES( Conf_Akad_Editor__c ,&quot;Marketing AO&quot;),True,
IF( $UserRole.DeveloperName ==&quot;Spv AO&quot; &amp;&amp; INCLUDES( Conf_Akad_Editor__c ,&quot;Spv AO&quot;),True,
False)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Config Akad Editor</label>
    <type>Checkbox</type>
</CustomField>