force-app/main/default/objects/Application__c/fields/Config_Application_Tab__c.field-meta.xml
<CustomField>
    <fullName>Config_Application_Tab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Config Application Tab</label>
    <referenceTo>Config_Application_Tab__c</referenceTo>
    <relationshipLabel>Applications Review</relationshipLabel>
    <relationshipName>Applications_Review</relationshipName>
    <type>Lookup</type>
</CustomField>