force-app/main/default/objects/Application__c/fields/Cover_Giro__c.field-meta.xml
<CustomField>
    <fullName>Cover_Giro__c</fullName>
    <label>Cover Giro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>