force-app/main/default/objects/Application__c/fields/Current_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Current_Datetime__c</fullName>
    <formula>TEXT(DAY(TODAY())) &amp; &quot; &quot; &amp;
CASE(MONTH(TODAY()),
1, &quot;Januari&quot;,
2, &quot;Februari&quot;,
3, &quot;Maret&quot;,
4, &quot;April&quot;,
5, &quot;Mei&quot;,
6, &quot;Juni&quot;,
7, &quot;Juli&quot;,
8, &quot;Agustus&quot;,
9, &quot;September&quot;,
10, &quot;Oktober&quot;,
11, &quot;November&quot;,
12, &quot;Desember&quot;,
&quot;&quot;
) &amp; &quot; &quot; &amp;
TEXT(YEAR(TODAY())) &amp; &quot; Pukul &quot; &amp; LPAD(TEXT(HOUR(TIMENOW())+7), 2, &quot;0&quot;) &amp; &quot;:&quot; &amp; LPAD(TEXT(MINUTE(TIMENOW())), 2, &quot;0&quot;) &amp; &quot; WIB&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Datetime</label>
    <type>Text</type>
</CustomField>