force-app/main/default/objects/Application__c/fields/Current_Ratio_Formula__c.field-meta.xml
<CustomField>
    <fullName>Current_Ratio_Formula__c</fullName>
    <formula>Total_Aset_Lancar_Formula__c /  Total_Hutang_Jangka_Pendek_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>