force-app/main/default/objects/Application__c/fields/Current_Step_Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Current_Step_Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Step Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications_Review6</relationshipName>
    <type>Lookup</type>
</CustomField>