force-app/main/default/objects/Application__c/fields/Customer_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_Formula__c</fullName>
    <formula>&apos;Customer Status&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Status</label>
    <type>Text</type>
</CustomField>