force-app/main/default/objects/Application__c/fields/Customer_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_Formula__c</fullName>
    <formula>&apos;Customer Type&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>