force-app/main/default/objects/Application__c/fields/Days_ARR_Formula__c.field-meta.xml
<CustomField>
    <fullName>Days_ARR_Formula__c</fullName>
    <formula>365 /  Account_Receivable_Ratio_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>