force-app/main/default/objects/Application__c/fields/Debt_to_Total_Asset_DTA_Formula__c.field-meta.xml
<CustomField>
    <fullName>Debt_to_Total_Asset_DTA_Formula__c</fullName>
    <formula>( Total_Hutang_Jangka_Panjang_Formula__c +  Total_Hutang_Jangka_Pendek_Formula__c ) /  Total_Asset_Formula__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debt to Total Asset (DTA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>