force-app/main/default/objects/Application__c/fields/Delegated_LAO__c.field-meta.xml
<CustomField>
    <fullName>Delegated_LAO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated LAO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications_Review5</relationshipName>
    <type>Lookup</type>
</CustomField>