force-app/main/default/objects/Application__c/fields/Detail_Penggunaan_Dana_New__c.field-meta.xml
<CustomField>
    <fullName>Detail_Penggunaan_Dana_New__c</fullName>
    <label>Detail Penggunaan Dana</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>