force-app/main/default/objects/Application__c/fields/DIR_Formula__c.field-meta.xml
<CustomField>
    <fullName>DIR_Formula__c</fullName>
    <formula>&apos;DIR&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIR</label>
    <type>Text</type>
</CustomField>