force-app/main/default/objects/Application__c/fields/Document_Checklist_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist_Complete_Date__c</fullName>
    <label>Document Checklist Complete Date</label>
    <type>DateTime</type>
</CustomField>