force-app/main/default/objects/Application__c/fields/Documents_List_Text__c.field-meta.xml
<CustomField>
    <fullName>Documents_List_Text__c</fullName>
    <label>Documents List Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>