force-app/main/default/objects/Application__c/fields/Dokumen_Akad_List__c.field-meta.xml
<CustomField>
    <fullName>Dokumen_Akad_List__c</fullName>
    <label>Dokumen Akad List</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>