force-app/main/default/objects/Application__c/fields/Dokumen_Aktivasi_List__c.field-meta.xml
<CustomField>
    <fullName>Dokumen_Aktivasi_List__c</fullName>
    <label>Dokumen Aktivasi List</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>