force-app/main/default/objects/Application__c/fields/DSR_Formula__c.field-meta.xml
<CustomField>
    <fullName>DSR_Formula__c</fullName>
    <formula>&apos;DSR&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSR</label>
    <type>Text</type>
</CustomField>