force-app/main/default/objects/Application__c/fields/Employment_Business_Since__c.field-meta.xml
<CustomField>
    <fullName>Employment_Business_Since__c</fullName>
    <label>Employment / Business Since</label>
    <length>255</length>
    <type>Text</type>
</CustomField>