force-app/main/default/objects/Application__c/fields/Exposure_CAA__c.field-meta.xml
<CustomField>
    <fullName>Exposure_CAA__c</fullName>
    <formula>IF( OR( ISNULL(  Temp_Exposure__c ) , Temp_Exposure__c=0) , 
   IF( OR( ISNULL( Survey__r.Exposure_Real__c ) , Survey__r.Exposure_Real__c=0) , 
   Loan_Information__r.NTF_Pengajuan__c, 
   Survey__r.Exposure_Real__c), 
Temp_Exposure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exposure CAA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>