force-app/main/default/objects/Application__c/fields/Exposure_Total__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Total__c</fullName>
    <formula>Survey__r.Exposure_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exposure Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>