force-app/main/default/objects/Application__c/fields/Final_NST_Risk_By__c.field-meta.xml
<CustomField>
    <fullName>Final_NST_Risk_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Approval Branch/CAA</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications_Review3</relationshipName>
    <type>Lookup</type>
</CustomField>