force-app/main/default/objects/Application__c/fields/Financial_Statement_Attached__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statement_Attached__c</fullName>
    <label>Financial Statement Attached</label>
    <length>255</length>
    <type>Text</type>
</CustomField>