force-app/main/default/objects/Application__c/fields/Frekuensi_Restrukturisasi__c.field-meta.xml
<CustomField>
    <fullName>Frekuensi_Restrukturisasi__c</fullName>
    <label>Frekuensi Restrukturisasi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>