force-app/main/default/objects/Application__c/fields/General_Catatan_Ringkasan_Kredit__c.field-meta.xml
<CustomField>
    <fullName>General_Catatan_Ringkasan_Kredit__c</fullName>
    <label>Review Hasil Analisa</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>