force-app/main/default/objects/Application__c/fields/Gross_Margin_Formula__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Formula__c</fullName>
    <formula>( Laba_Kotor_Formula__c /  Pendapatan_Penjualan__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>