force-app/main/default/objects/Application__c/fields/Hasil_Analisa__c.field-meta.xml
<CustomField>
    <fullName>Hasil_Analisa__c</fullName>
    <label>Hasil Analisa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hasil_Analisa_5C_1P</valueSetName>
    </valueSet>
</CustomField>