force-app/main/default/objects/Application__c/fields/Hasil_Check_Akad__c.field-meta.xml
<CustomField>
    <fullName>Hasil_Check_Akad__c</fullName>
    <label>Hasil Check Akad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Setuju</fullName>
            </value>
            <value>
                <fullName>Tidak Setuju</fullName>
            </value>
            <value>
                <fullName>Perbaikan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>