force-app/main/default/objects/Application__c/fields/Highest_Installment_BFI_Formula__c.field-meta.xml
<CustomField>
    <fullName>Highest_Installment_BFI_Formula__c</fullName>
    <formula>&apos;Highest Installment BFI&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highest Installment BFI</label>
    <type>Text</type>
</CustomField>