force-app/main/default/objects/Application__c/fields/Hold_dana_angsuran__c.field-meta.xml
<CustomField>
    <fullName>Hold_dana_angsuran__c</fullName>
    <label>Hold dana angsuran</label>
    <length>255</length>
    <type>Text</type>
</CustomField>