force-app/main/default/objects/Application__c/fields/Hold_dana_IMB__c.field-meta.xml
<CustomField>
    <fullName>Hold_dana_IMB__c</fullName>
    <label>Hold dana IMB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>