force-app/main/default/objects/Application__c/fields/Hold_dana_pengurusan_akta_cerai__c.field-meta.xml
<CustomField>
    <fullName>Hold_dana_pengurusan_akta_cerai__c</fullName>
    <label>Hold dana pengurusan akta cerai</label>
    <length>255</length>
    <type>Text</type>
</CustomField>