force-app/main/default/objects/Application__c/fields/Hold_dana_update_sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Hold_dana_update_sertipikat__c</fullName>
    <label>Hold dana update sertipikat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>