force-app/main/default/objects/Application__c/fields/HPP__c.field-meta.xml
<CustomField>
    <fullName>HPP__c</fullName>
    <label>HPP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>