force-app/main/default/objects/Application__c/fields/HPP_Spouse__c.field-meta.xml
<CustomField>
    <fullName>HPP_Spouse__c</fullName>
    <label>HPP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>