force-app/main/default/objects/Application__c/fields/Hutang_Jangka_pendek_lainnya__c.field-meta.xml
<CustomField>
    <fullName>Hutang_Jangka_pendek_lainnya__c</fullName>
    <label>Hutang Jangka pendek lainnya</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>