force-app/main/default/objects/Application__c/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <formula>Lead__r.ID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Number</label>
    <type>Text</type>
</CustomField>