force-app/main/default/objects/Application__c/fields/Input_By__c.field-meta.xml
<CustomField>
    <fullName>Input_By__c</fullName>
    <formula>Lead__r.Input_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Input By</label>
    <type>Text</type>
</CustomField>