force-app/main/default/objects/Application__c/fields/Is_Agreement_Creation_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Is_Agreement_Creation_in_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agreement Creation in Progress</label>
    <type>Checkbox</type>
</CustomField>