force-app/main/default/objects/Application__c/fields/Is_Approval_Assigned_Chosed__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_Assigned_Chosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval Assigned Chosed</label>
    <type>Checkbox</type>
</CustomField>