force-app/main/default/objects/Application__c/fields/Is_Current_User_is_AO__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_User_is_AO__c</fullName>
    <formula>IF(LEFT($UserRole.Name,2) == &quot;AO&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current User is AO</label>
    <type>Checkbox</type>
</CustomField>